--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
           
         const handicaps = urlParams.get('handicaps');
           
-        if(handicaps == "undefined"){
+        if(handicaps === undefined){
            $("#input").text("8,6,5,4,3,3,2");   
         }
        else{
