--- a/index.html
+++ b/index.html
@@ -30,10 +30,10 @@
         const handicaps = urlParams.get('handicaps');
           
         if(handicaps === undefined){
-           $("#input").text("8,6,5,4,3,3,2");   
+           $("#input").val("8,6,5,4,3,3,2");   
         }
        else{
-           $("#input").text(handicaps);
+           $("#input").val(handicaps);
           $("#button").click();              
         }
 
