--- a/index.html
+++ b/index.html
@@ -15,8 +15,14 @@
 </head>
 
 <body>
-    <label>Input:</label><input id="input" type="text" /><br/>
-    <button type="button" id="button">Get Matches</button>
+    <div class="form-group">
+        <label for="input">Input:</label>
+        <input type="text" class="form-control" id="input">
+
+    </div>
+
+    <button class="btn btn-default" id="button" type="submit">Get Possible Combinations</button>
+
 
     <div id="container"></div>
     <script>
