--- a/index.html
+++ b/index.html
@@ -49,6 +49,8 @@
 
             $("#button").click(function() {
 
+                
+                sets = [];
                 array = $("#input").val().split(",");
                 finalArray = subset(array);
                 var finalText = '';
